ckad/11.network-policy/ingress-def.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-watch-service
spec:
  backend:
    serviceName: watch-service
    servicePort: 80
