ckad/11.network-policy/ingress-def3.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-watch-wear-service
  annotations:
    nginx.ingress.kubernetes.io/app-root: /app1
  name: approot
  namespace: default
spec:
  rules:
  - host: www.watch.wear-online.com
    http:
     paths:
      - path: /watch
        backend:
          serviceName: watch-service
          servicePort: 80
       - path: /wear
        backend:
          serviceName: wear-service
          servicePort: 80

# when we don't provide host, all request hitting the ingress will get routed to the services
# regardless of from which domain the request is being hit
